tests/errors/type_check/statement/assign_ref_kind_mismatch.err.expected
error: at 5:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is &mut i64, RHS is & i64
   |
 5 |             r = &y;
   |             ^^^^^^
